--- a/src/styles/components/texto.css
+++ b/src/styles/components/texto.css
@@ -6,6 +6,25 @@
     padding: 2% 0;
 }
 
+.Texto>h1 {
+    font-family: Libre Baskerville;
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    color: #045570;
+}
+
+.Texto p1 {
+    font-family: Libre Baskerville;
+    text-align: justify;
+    text-justify: auto;
+    font-size: 18px;
+    color: #045570;
+    margin-left: 8%;
+    margin-top: 5%;
+    margin-right: 8%;
+}
+
 .Texto>h2 {
     font-family: Libre Baskerville;
     text-align: left;
