--- a/src/styles/pages/index.css
+++ b/src/styles/pages/index.css
@@ -5,6 +5,29 @@
     opacity: 0.6;
 }
 
+.container_frase_disney{
+    display: flex;
+    justify-content: center;
+    margin-top: 5%;
+    opacity: 0.6;
+}
+
+.frase_disney {
+    width: 100%;
+    height: 60px;
+    justify-content: center;
+    font-size: 24px;
+    text-align: justify;
+    font-weight: bold;
+    opacity: 0.6;
+    align-self: "center";
+    font-family: Libre Baskerville;
+    background-color: #D4A23F;
+    color: #045570;
+    padding: 3%;
+    z-index: 3;
+}
+
 .botao_home {
     display: flex;
     width: 250px;
@@ -30,8 +53,4 @@
     background-color: white; 
     border: 2px solid white;
     margin-top: 200px;
-}
-
-.small_logo {
-
 }
