--- a/src/styles/components/footer.css
+++ b/src/styles/components/footer.css
@@ -1,13 +1,12 @@
 .Footer {
-    background-color: #000;
-    padding: 2% 0;
+    background-color: #ffffff;
+    padding: 10%;
 }
 
 footer {
-    color: aliceblue;
-    display: flex;
+    color: rgb(255, 255, 255);
     flex-direction: column;
     align-items: center;
     width: 100%;
-    gap: 15px;
+    /* gap: 15px; */
 }
