--- a/src/styles/components/texto.css
+++ b/src/styles/components/texto.css
@@ -17,6 +17,15 @@
     z-index: 3;
 }
 
+.Texto>p4 {
+    font-family: Libre Baskerville;
+    text-align: left;
+    font-size: 24px;
+    color: #045570;
+    z-index: 3;
+}
+
+
 .Texto>h3 {
     font-family: Libre Baskerville;
     text-align: center;
@@ -44,6 +53,15 @@
     font-family: Libre Baskerville;
     text-align: left;
     font-size: 40px;
+    font-weight: bold;
+    color: #045570;
+    z-index: 3;
+}
+
+.Texto>h4 {
+    font-family: Libre Baskerville;
+    text-align: left;
+    font-size: 24px;
     font-weight: bold;
     color: #045570;
     z-index: 3;
