--- a/src/styles/components/texto.css
+++ b/src/styles/components/texto.css
@@ -35,6 +35,7 @@
     margin-right: 15%;
     color: #045570;
     z-index: 3;
+    text-shadow: 2px 2px 4px #888888;
 }
 
 .Texto p1 {
@@ -56,6 +57,19 @@
     font-weight: bold;
     color: #045570;
     z-index: 3;
+    text-shadow: 2px 2px 4px #888888;
+}
+
+.Texto>h2_t {
+    margin-top: -10px;
+    padding-left: 70px;
+    font-family: Libre Baskerville;
+    text-align: left;
+    font-size: 40px;
+    font-weight: bold;
+    color: #045570;
+    z-index: 3;
+    text-shadow: 2px 2px 4px #888888;
 }
 
 .Texto>h4 {
@@ -71,7 +85,7 @@
 .Texto hr{
     font-family: Libre Baskerville;
     text-justify: left;
-    width: 8%;
+    width: 60px;
     margin-left: 27%;
     background-color: #045570;
     border: 3px solid #045570;
@@ -81,7 +95,7 @@
 .Texto hr2{
     font-family: Libre Baskerville;
     text-justify: left;
-    width: 8%;
+    width: 60px;
     background-color: #045570;
     border: 3px solid #045570;
     z-index: 3;
