Fiz a base da sessão clientes.

--- a/src/styles/components/texto.css
+++ b/src/styles/components/texto.css
@@ -86,7 +86,7 @@
     font-family: Libre Baskerville;
     text-justify: left;
     width: 60px;
-    margin-left: 27%;
+    margin-left: 180px;
     background-color: #045570;
     border: 3px solid #045570;
     z-index: 3;
