--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -29,11 +29,11 @@ header {
 /* Estilos para a barra de navegação móvel */
 .nav-idiom {
 	border-radius: 20px;
-	position: fixed;
+	position: absolute;
 	display: none;
 	width: 80vw;
 	height: 130px;
-	max-width: 400px;
+	max-width: 350px;
 	right: 40px;
 	background-color: rgb(255, 255, 255);
 	flex-direction: column;
