--- a/src/styles/components/carousel.css
+++ b/src/styles/components/carousel.css
@@ -1,7 +1,22 @@
+.title h2{
+    font-family: Libre Baskerville;
+    text-align: left;
+    font-size: 60px;
+    margin-left: 0px;
+    color: #045570;
+    z-index: 3;
+    margin-top: 5%;
+    margin-bottom: -6%;
+}
+
+/* Aqui se refere a mudança de imóvel */
+
 .carousel-container {
     height:400px;
+    width:100%;
     display: flex;
-    justify-content: left;
+    justify-content: center;
+    align-items: center;
     padding-top:6%;
     padding-bottom:4%;
     align-items: center;
@@ -14,6 +29,7 @@
     width:600px;
 }
 
+  
 .prev-button, .next-button {
     height: 60px;
     width: 60px;
@@ -30,18 +46,84 @@
     transform: scaleX(-1);
     height: 60px;
     width: 60px;
+    opacity: 0.6;
 }
 
 .next-button  img{
     height: 60px;
     width: 60px;
+    opacity: 0.6;
 }
 
 .prev-button {
-    margin-right: -70px;
+    justify-content: left;
 }
 
 .next-button {
-    margin-left: -70px;
+    justify-content: right;
+    margin-left: 10px;
 }
   
+/* Apartir daqui se refere a mudança de imagem */
+
+.carousel-container-img {
+    height:400px;
+    padding-top:6%;
+    padding-bottom:4%;
+}
+  
+.carousel-container-img img {
+    border-radius: 20px;
+    height:400px;
+    width:600px;
+}
+
+.prev-button-img {
+    justify-content: left;
+    border: none;
+    cursor: pointer;
+    align-items: left;
+    background-color: transparent;
+}
+
+.next-button-img {
+    align-items: right;
+    text-align: "right";
+    justify-content: right;
+    border: none;
+    cursor: pointer;
+    
+    background-color: transparent;
+}
+
+.prev-button-img img{
+    transform: scaleX(-1);
+    height: 60px;
+    width: 60px;
+    opacity: 0.6;
+}
+
+.next-button-img  img{
+    height: 60px;
+    width: 60px;
+    opacity: 0.6;
+}
+
+.prev-button-img {
+    margin-right: 0px;
+}
+
+.next-button-img {
+    margin-right: 0px;
+}
+
+.carousel-container-img p {
+    font-family: Libre Baskerville;
+    text-align: justify;
+    text-justify: auto;
+    font-size: 24px;
+    color: #045570;
+    z-index: 3;
+    padding-right: 5%;
+    padding-left: 5%;
+}
