--- a/src/styles/pages/vendas.css
+++ b/src/styles/pages/vendas.css
@@ -1,15 +1,21 @@
 .carousel_background {
     width: 100%;
-    height: 70vh;
-    justify-content: center;
+    height: 90vh;
     font-size: 24px;
-    text-align: justify;
     font-weight: bold;
-    opacity: 0.6;
-    align-self: "center";
+    background-color: rgb(255, 255, 255, 0.6);
     font-family: Libre Baskerville;
-    background-color: #ffffff;
     color: #045570;
     padding: 3%;
+    z-index: 3;
+}
+
+.carousel_background h2 {
+    font-family: Libre Baskerville;
+    text-align: left;
+    margin-left: 100px;
+    font-size: 40px;
+    font-weight: bold;
+    color: #045570;
     z-index: 3;
 }
