--- a/src/styles/pages/vendas.css
+++ b/src/styles/pages/vendas.css
@@ -19,3 +19,36 @@
     color: #045570;
     z-index: 3;
 }
+
+.image {
+    display: flex;
+    text-align: center;
+    align-content: center;
+}
+
+.container_botao_contato{
+    display: flex;
+    justify-content: right;
+    margin-top: 100px;
+    margin-right: 150px;
+    opacity: 1;
+}
+
+.botao_contato {
+    display: flex;
+    width: 300px;
+    height:100px;
+    justify-content: center;
+    font-size: 24px;
+    align-self: "center";
+    font-family: Libre Baskerville;
+    background-color: #045570;
+    border-radius: 15px;
+    color: #E1DFDB;
+    transition: transform 1s;
+    padding: 3% 1%;
+}
+
+.botao_contato:hover {
+    transform: scale(1.05);
+}
