--- a/src/styles/components/carousel.css
+++ b/src/styles/components/carousel.css
@@ -1,14 +1,3 @@
-.title h2{
-    font-family: Libre Baskerville;
-    text-align: left;
-    font-size: 60px;
-    margin-left: 0px;
-    color: #045570;
-    z-index: 3;
-    margin-top: 5%;
-    margin-bottom: -6%;
-}
-
 /* Aqui se refere a mudança de imóvel */
 
 .carousel-container {
@@ -23,7 +12,7 @@
 }
   
 .carousel-container img {
-    border-radius: 20px;
+    border-radius: 22px;
     height:400px;
     width:600px;
 }
@@ -37,7 +26,7 @@
     border: none;
     cursor: pointer;
     background-color: transparent;
-    margin-bottom: -720px;
+    margin-bottom: -670px;
 }
 
 .prev-button img{
@@ -70,15 +59,15 @@
 }
 
 .carousel-container-img {
-    height:400px;
+    height:450px;
     padding-top:6%;
     padding-bottom:4%;
 }
   
 .carousel-container-img img {
     border-radius: 20px;
-    height:400px;
-    width:600px;
+    height:366px;
+    width:550px;
 }
 
 .prev-button-img {
@@ -118,11 +107,15 @@
 
 /* Referente aos textos */
 
+.text {
+    width:650px;
+}
+
 .text p {
     font-family: Libre Baskerville;
     text-align: justify;
     text-justify: auto;
-    font-size: 24px;
+    font-size: 22px;
     color: #045570;
     z-index: 3;
     padding-right: 5%;
@@ -133,13 +126,13 @@
     padding: 5%;
     font-family: Libre Baskerville;
     text-align: left;
-    font-size: 24px;
+    font-size: 20px;
     color: #045570;
     padding-left: 10%;
     padding-right: 10%;
     padding-bottom: 1%;
     z-index: 3;
-    line-height: 2.5;
+    line-height: 2.0;
     
 }
 
@@ -152,6 +145,13 @@
     
 }
 
-.address {
-    line-height: 1;
+.title h2{
+    font-family: Libre Baskerville;
+    text-align: left;
+    font-size: 50px;
+    margin-left: 0px;
+    color: #045570;
+    z-index: 3;
+    margin-top: 5%;
+    margin-bottom: -6%;
 }
