--- a/src/styles/components/texto.css
+++ b/src/styles/components/texto.css
@@ -35,7 +35,6 @@
     margin-right: 15%;
     color: #045570;
     z-index: 3;
-    text-shadow: 2px 2px 4px #888888;
 }
 
 .Texto p1 {
@@ -57,7 +56,6 @@
     font-weight: bold;
     color: #045570;
     z-index: 3;
-    text-shadow: 2px 2px 4px #888888;
 }
 
 .Texto>h2_t {
@@ -69,7 +67,6 @@
     font-weight: bold;
     color: #045570;
     z-index: 3;
-    text-shadow: 2px 2px 4px #888888;
 }
 
 .Texto>h4 {
@@ -120,6 +117,7 @@
     padding-right: 10%;
     padding-bottom: 1%;
     z-index: 3;
+    line-height: 1.5;
 }
 
 
