--- a/src/styles/components/texto.css
+++ b/src/styles/components/texto.css
@@ -108,6 +108,16 @@
     padding-bottom: 1%;
 }
 
+.Texto p4 {
+    font-family: Libre Baskerville;
+    text-align: justify;
+    text-justify: auto;
+    font-size: 24px;
+    color: #045570;
+    z-index: 3;
+    padding-bottom: 1%;
+}
+
 .Texto ul {
     font-family: Libre Baskerville;
     text-align: left;
