--- a/src/styles/pages/index.css
+++ b/src/styles/pages/index.css
@@ -3,7 +3,8 @@
     width: 100%;
     height: 110px;
     justify-content: center;
-    background-color: #D4A23F;;
+    background-color: #d4a23f90;
+    z-index: 3;
 }
 
 .frase_disney {
