--- a/src/styles/pages/sobre_nos.css
+++ b/src/styles/pages/sobre_nos.css
@@ -1,9 +1,27 @@
 .rectangle_sobre_nos {
     border-radius: 15px;
-    width: 100%; 
-    height: 300px;
-    background-color: rgb(255, 255, 255,0.8);
+    width: 100%;
+    height: 370px;
+    background-color: rgb(255, 255, 255);
     padding: 5%;
+    padding-left: 10%;
+    padding-right: 10%;
     margin-top:50px;
     /* border: 2px solid white; */
+}
+
+.perfil_socias {
+    width: 400px;
+    z-index:3;
+}
+
+.rectangle_sobre_nos p {
+    text-indent: 30px;
+    font-family: Libre Baskerville;
+    text-align: justify;
+    text-justify: auto;
+    font-size: 18px;
+    color: #045570;
+    margin-top: 5%;
+    z-index: 3;
 }
