Adicionei os valores ao home. No footer agora só falta a frase e alguns links de redes sociais.

--- a/src/styles/components/footer.css
+++ b/src/styles/components/footer.css
@@ -6,7 +6,8 @@
 footer {
     color: rgb(255, 255, 255);
     flex-direction: column;
+    height: 30px;
     align-items: center;
     width: 100%;
-    /* gap: 15px; */
+    gap: 15px;
 }
