--- a/src/styles/components/texto.css
+++ b/src/styles/components/texto.css
@@ -17,15 +17,6 @@
     z-index: 3;
 }
 
-.Texto>p4 {
-    font-family: Libre Baskerville;
-    text-align: left;
-    font-size: 24px;
-    color: #045570;
-    z-index: 3;
-}
-
-
 .Texto>h3 {
     font-family: Libre Baskerville;
     text-align: center;
@@ -34,18 +25,6 @@
     margin-left: 15%;
     margin-right: 15%;
     color: #045570;
-    z-index: 3;
-}
-
-.Texto p1 {
-    font-family: Libre Baskerville;
-    text-align: justify;
-    text-justify: auto;
-    font-size: 18px;
-    color: #045570;
-    margin-left: 8%;
-    margin-top: 5%;
-    margin-right: 8%;
     z-index: 3;
 }
 
@@ -76,30 +55,11 @@
     font-weight: bold;
     color: #045570;
     z-index: 3;
-}
-
-
-.Texto hr{
-    font-family: Libre Baskerville;
-    text-justify: left;
-    width: 60px;
-    margin-left: 180px;
-    background-color: #045570;
-    border: 3px solid #045570;
-    z-index: 3;
-}
-
-.Texto hr2{
-    font-family: Libre Baskerville;
-    text-justify: left;
-    width: 60px;
-    background-color: #045570;
-    border: 3px solid #045570;
-    z-index: 3;
+    white-space: nowrap;
 }
 
 .Texto p {
-    font-family: Libre Baskerville;
+    font-family: Inter;
     text-align: left;
     text-justify: auto;
     font-size: 24px;
@@ -108,28 +68,17 @@
     padding-bottom: 1%;
 }
 
-.Texto p4 {
+.Texto p1 {
     font-family: Libre Baskerville;
     text-align: justify;
     text-justify: auto;
-    font-size: 24px;
+    font-size: 18px;
     color: #045570;
+    margin-left: 8%;
+    margin-top: 5%;
+    margin-right: 8%;
     z-index: 3;
-    padding-bottom: 1%;
 }
-
-.Texto ul {
-    font-family: Libre Baskerville;
-    text-align: left;
-    font-size: 24px;
-    color: #045570;
-    padding-left: 10%;
-    padding-right: 10%;
-    padding-bottom: 1%;
-    z-index: 3;
-    line-height: 1.5;
-}
-
 
 .Texto p2 {
     font-family: Libre Baskerville;
@@ -152,3 +101,66 @@
     font-weight: bold;
 }
 
+
+.Texto p4 {
+    font-family: Libre Baskerville;
+    text-align: justify;
+    text-justify: auto;
+    font-size: 24px;
+    color: #045570;
+    z-index: 3;
+    padding-bottom: 1%;
+}
+
+
+.Texto>p4 {
+    font-family: Libre Baskerville;
+    text-align: left;
+    font-size: 24px;
+    color: #045570;
+    z-index: 3;
+}
+
+
+.Texto ul {
+    font-family: Inter;
+    text-align: left;
+    font-size: 24px;
+    color: #045570;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-bottom: 1%;
+    z-index: 3;
+    line-height: 1.5;
+}
+
+.Texto li {
+    font-family: Inter;
+    text-align: left;
+    font-size: 24px;
+    color: #045570;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-bottom: 1%;
+    z-index: 3;
+    line-height: 1.3;
+}
+
+.Texto hr{
+    font-family: Libre Baskerville;
+    text-justify: left;
+    width: 60px;
+    margin-left: 180px;
+    background-color: #045570;
+    border: 3px solid #045570;
+    z-index: 3;
+}
+
+.Texto hr2{
+    font-family: Libre Baskerville;
+    text-justify: left;
+    width: 60px;
+    background-color: #045570;
+    border: 3px solid #045570;
+    z-index: 3;
+}
