--- a/src/styles/components/carousel.css
+++ b/src/styles/components/carousel.css
@@ -8,7 +8,6 @@
     align-items: center;
     padding-top:6%;
     padding-bottom:4%;
-    margin-left: 30px;
 }
   
 .carousel-container img {
@@ -107,13 +106,24 @@
 
 /* Referente aos textos */
 
+.title h2{
+    font-family: Libre Baskerville;
+    text-align: left;
+    font-size: 40px;
+    margin-left: 0px;
+    color: #045570;
+    z-index: 3;
+    margin-top: 5%;
+    margin-bottom: -6%;
+}
+
 .text {
     width:650px;
     overflow-y: auto;
 }
 
 .text p {
-    font-family: Libre Baskerville;
+    font-family: Inter;
     text-align: justify;
     text-justify: auto;
     font-size: 22px;
@@ -121,11 +131,12 @@
     z-index: 3;
     padding-right: 5%;
     padding-left: 5%;
+    font-weight: initial;
 }
 
 .text ul {
     padding: 5%;
-    font-family: Libre Baskerville;
+    font-family: Inter;
     text-align: left;
     font-size: 20px;
     color: #045570;
@@ -133,26 +144,19 @@
     padding-right: 10%;
     padding-bottom: 1%;
     z-index: 3;
-    line-height: 2.0;
-    
+    line-height: 1.5;
+    font-weight: initial;
+}
+
+.text li {
+    margin-top: 10px;
 }
 
 .text p1 {
-    font-family: Libre Baskerville;
+    font-family: Inter;
     text-align: left;
     font-size: 20px;
     z-index: 3;
     color: #045570;
-    
-}
-
-.title h2{
-    font-family: Libre Baskerville;
-    text-align: left;
-    font-size: 50px;
-    margin-left: 0px;
-    color: #045570;
-    z-index: 3;
-    margin-top: 5%;
-    margin-bottom: -6%;
+    font-weight: initial;
 }
