--- a/src/styles/components/texto.css
+++ b/src/styles/components/texto.css
@@ -11,7 +11,7 @@
 .Texto>h1 {
     font-family: Libre Baskerville;
     text-align: center;
-    font-size: 24px;
+    font-size: 22px;
     font-weight: bold;
     color: #045570;
     z-index: 3;
@@ -20,7 +20,7 @@
 .Texto>h3 {
     font-family: Libre Baskerville;
     text-align: center;
-    font-size: 24px;
+    font-size: 22px;
     font-weight: bold;
     margin-left: 15%;
     margin-right: 15%;
@@ -62,14 +62,14 @@
     font-family: Inter;
     text-align: left;
     text-justify: auto;
-    font-size: 24px;
+    font-size: 22px;
     color: #045570;
     z-index: 3;
     padding-bottom: 1%;
 }
 
 .Texto p1 {
-    font-family: Libre Baskerville;
+    font-family: Inter;
     text-align: justify;
     text-justify: auto;
     font-size: 18px;
@@ -81,51 +81,51 @@
 }
 
 .Texto p2 {
-    font-family: Libre Baskerville;
+    font-family: Inter;
     text-align: left;
-    font-size: 18px;
+    font-size: 16px;
     color: #045570;
     margin-left: 8%;
     margin-top: 5%;
     margin-right: 8%;
     z-index: 3;
-    font-weight: bold;
+    /* font-weight: bold; */
 }
 
 .Texto p3 {
-    font-family: Libre Baskerville;
+    font-family: Inter;
     text-align: justify;
-    font-size: 24px;
+    font-size: 22px;
     color: #045570;
     z-index: 3;
-    font-weight: bold;
+    /* font-weight: bold; */
 }
 
 
 .Texto p4 {
-    font-family: Libre Baskerville;
+    font-family: Inter;
     text-align: justify;
     text-justify: auto;
-    font-size: 24px;
+    font-size: 22px;
     color: #045570;
     z-index: 3;
     padding-bottom: 1%;
 }
 
 
-.Texto>p4 {
-    font-family: Libre Baskerville;
+/* .Texto>p4 {
+    font-family: Inter;
     text-align: left;
     font-size: 24px;
     color: #045570;
     z-index: 3;
-}
+} */
 
 
 .Texto ul {
     font-family: Inter;
     text-align: left;
-    font-size: 24px;
+    font-size: 22px;
     color: #045570;
     padding-left: 10%;
     padding-right: 10%;
@@ -137,7 +137,7 @@
 .Texto li {
     font-family: Inter;
     text-align: left;
-    font-size: 24px;
+    font-size: 22px;
     color: #045570;
     padding-left: 10%;
     padding-right: 10%;
