--- a/src/styles/pages/clientes.css
+++ b/src/styles/pages/clientes.css
@@ -7,5 +7,19 @@
     height: 130px; 
     background-color: white; 
     border: 2px solid white;
-    position: absolute
+    position: absolute;
+    justify-content: center;
+    align-content: center;
+    z-index: 1;
+    overflow: hidden;
+    padding: 3%;
+    padding-left: 8%;
+}
+
+.rectangle_clients p1 {
+    font-family: Inter;
+    text-align: justify;
+    font-size: 18px;
+    color: #045570;
+    z-index: 3;
 }
