--- a/src/styles/pages/sobre_nos.css
+++ b/src/styles/pages/sobre_nos.css
@@ -17,10 +17,10 @@
 
 .rectangle_sobre_nos p {
     text-indent: 30px;
-    font-family: Libre Baskerville;
+    font-family: Inter;
     text-align: justify;
     text-justify: auto;
-    font-size: 18px;
+    font-size: 16px;
     color: #045570;
     margin-top: 5%;
     z-index: 3;
