Mudei o Nossa História de lugar, faltra melhorar graficamente.

--- a/src/styles/components/texto.css
+++ b/src/styles/components/texto.css
@@ -104,7 +104,7 @@
 
 .Texto p4 {
     font-family: Inter;
-    text-align: justify;
+    text-align: left;
     text-justify: auto;
     font-size: 22px;
     color: #045570;
