--- a/src/styles/pages/index.css
+++ b/src/styles/pages/index.css
@@ -1,24 +1,42 @@
-.container_frase_disney{
+.secao1 {
+    position: relative;
+    overflow: hidden;
+    height: 135vh;
+    /* Initial height */
+    text-align: center;
     display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.Background_inicio {
+    position: absolute;
+    top: -5%;
+    left: 0;
+    background-image: url(/images/Home/background1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.6;
+    height: 115%;
+    /* 100% height to cover the entire div */
     width: 100%;
-    height: 110px;
-    justify-content: center;
-    background-color: #d4a23f90;
-    z-index: 3;
+    z-index: 1;
 }
 
-.frase_disney {
+.container_logo {
+    text-align: center;
+    display: flex;
     justify-content: center;
-    font-size: 24px;
-    text-align: justify;
-    font-weight: bold;
-    align-self: "center";
-    font-family: Libre Baskerville;
-    color: #045570;
-    z-index: 3;
+    align-content: center;
+    z-index: 2;
 }
 
-.container_botao_home{
+.img_logo {
+    height: 35%;
+    margin-top: 35%;
+}
+
+.container_botao_home {
     display: flex;
     justify-content: center;
     margin-top: 100px;
@@ -44,23 +62,192 @@
     transform: scale(1.05);
 }
 
+.secao2 {
+    position: relative;
+    overflow: hidden;
+    height: 100vh;
+    /* Initial height */
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.Background_porque_trab {
+    position: absolute;
+    background-image: url(/images/Home/background2.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.5;
+    background-position: center;
+    height: 140%;
+    /* 100% height to cover the entire div */
+    width: 100%;
+    z-index: 1;
+}
+
+.grid_porque_trab {
+    align-items: center;
+    align-content: center;
+    text-align: center;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    align-content: center;
+    z-index: 2;
+}
+
+.container_img_porque {
+    text-align: center;
+    justify-content: center;
+    align-content: center;
+    z-index: 2;
+}
+
+.img_porque {
+    height: 350px;
+    border-radius: 15px;
+}
+
+.container_texto_porque {
+    text-align: center;
+    justify-content: center;
+    align-content: center;
+    z-index: 2;
+    padding-right: 10%;
+    margin-top: -100px;
+}
+
+.grid_valores {
+    display: flex;
+    grid-template: repeat(2, 1fr);
+    grid-gap: 100px;
+    margin-top: 30px;
+}
+
+.secao3 {
+    /* display: flex; */
+    position: relative;
+    overflow: hidden;
+    height: 100vh;
+    /* Initial height */
+    text-align: center;
+    /* justify-content: center; */
+    /* align-content: center; */
+}
+
+.background_nossa_historia {
+    position: absolute;
+    background-image: url(/images/Home/5.jpg);
+    background-color: rgba(255, 255, 255, 0.5);
+    background-blend-mode: lighten;
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* opacity: 0.4; */
+    background-position: center;
+    height: 170%;
+    /* 100% height to cover the entire div */
+    width: 100%;
+    z-index: 1;
+}
+
+.titulo_nossa_historia {
+    z-index: 3;
+    width: 60%;
+    margin-top: 0%;
+    margin-left: 5%;
+    opacity: 1;
+}
+
+.secao4 {
+    display: grid;
+    position: relative;
+    overflow: hidden;
+    height: 130vh;
+    /* Initial height */
+}
+
+.Background_concierge {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-image: url(/images/Home/background3.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.5;
+    background-position: center;
+    height: 100%;
+    /* 100% height to cover the entire div */
+    width: 100%;
+    z-index: 0;
+}
+
+.texto_concierge {
+    margin-top: 15%;
+    margin-left: 8%;
+    width: 50%;
+}
+
+.titulo_concierge {
+    margin-top: 4%;
+    margin-left: 8%;
+}
+
+.topicos_concierge {
+    margin-top: -3%;
+    margin-left: 8%;
+}
+
+.container_img_concierge {
+    text-align: right;
+    justify-content: right;
+    align-content: right;
+    z-index: 3;
+    margin-top: -31%;
+    margin-right: 5%;
+}
+
+.img_concierge {
+    width: 25%;
+}
+
+.container_frase_disney {
+    display: flex;
+    width: 100%;
+    height: 110px;
+    justify-content: center;
+    background-color: #d4a23f90;
+    z-index: 3;
+}
+
+.frase_disney {
+    justify-content: center;
+    font-size: 24px;
+    text-align: justify;
+    font-weight: bold;
+    align-self: "center";
+    font-family: Libre Baskerville;
+    color: #045570;
+    z-index: 3;
+}
+
 .rectangle {
     border-radius: 15px;
-    width: 225px; 
-    height: 330px; 
-    background-color: white; 
+    width: 225px;
+    height: 330px;
+    background-color: white;
     border: 2px solid white;
     margin-top: 200px;
 }
 
 .nossa_historia_background {
-    height:400px;
-    width:100vw;
+    height: 400px;
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top:6%;
-    padding-bottom:4%;
+    padding-top: 6%;
+    padding-bottom: 4%;
     background-color: rgb(255, 255, 255, 0.8);
     color: #045570;
     padding: 10%;
@@ -68,22 +255,21 @@
 }
 
 .nossa_historia {
-    height:400px;
-    width:100%;
+    height: 400px;
+    width: 100%;
     /* display: flex; */
     justify-content: center;
     align-items: center;
-    padding-top:6%;
-    padding-bottom:4%;
+    padding-top: 6%;
+    padding-bottom: 4%;
 }
-  
+
 .nossa_historia p {
     font-family: Libre Baskerville;
-    text-align:center;
+    text-align: center;
     text-justify: auto;
     font-size: 34px;
     color: #045570;
     z-index: 3;
     padding-bottom: 1%;
 }
-  
