--- a/src/styles/pages/imoveis.css
+++ b/src/styles/pages/imoveis.css
@@ -1,3 +1,25 @@
+.imoveis {
+    position: relative;
+    overflow: hidden;
+    height: 120vh;
+    display: flex;
+    padding-top: 10%;
+    padding-bottom: 5%;
+}
+
+.background_imoveis {
+    position: absolute;
+    top: -15%;
+    left: 0;
+    background-image: url(/images/Home/background1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.6;
+    height: 115%;
+    width: 100%;
+    z-index: 1;
+}  
+
 .carousel_background {
     width: 100%;
     height: 90vh;
@@ -26,7 +48,7 @@
     align-content: center;
 }
 
-.container_botao_contato{
+.container_botao_contato {
     display: flex;
     justify-content: right;
     margin-top: 100px;
@@ -37,7 +59,7 @@
 .botao_contato {
     display: flex;
     width: 300px;
-    height:100px;
+    height: 100px;
     justify-content: center;
     font-size: 24px;
     align-self: "center";
