--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -1,20 +1,18 @@
-header {
+.header {
+	position: absolute;
+	width: 100%;
+	z-index: 100;
 	color: #045570;
-    font-family: 'Libre Baskerville';
+    font-family: Libre Baskerville;
 	display: flex;
 	align-items: center;
     justify-content: center;
-	height: 90px;
+	height: 10%;
 	padding: 0 5%;
+	cursor: pointer;
 }
 
-.nav {
-    align-items: center;
-	cursor: pointer;
-    justify-content: center;
-  }
-
-.nav ul {
+.header ul {
     align-items: center;
     justify-content: center;
 	list-style: none;
@@ -22,23 +20,17 @@ header {
 	gap: 60px;
 }
 
-.nav li {
+.header li {
     align-items: center;
 	font-size: 18px;
-}
-
-.div {
-	cursor: pointer;
 }
 
 /* Estilos para a barra de navegação móvel */
 .nav-idiom {
 	border-radius: 20px;
 	position: absolute;
-	display: none;
-	width: 80vw;
-	height: 130px;
-	max-width: 350px;
+	width: 22%;
+	height: 170%;
 	background-color: rgb(255, 255, 255);
 	flex-direction: column;
 	align-items: center;
@@ -75,4 +67,9 @@ header {
 	display: flex;
 	justify-content: left;
 	align-items: center;
+}
+
+.img_flag {
+	width:20%;
+	z-index: 3
 }
