--- a/src/styles/pages/index.css
+++ b/src/styles/pages/index.css
@@ -6,19 +6,16 @@
     text-align: center;
     display: flex;
     justify-content: center;
-    align-content: center;
 }
 
 .Background_inicio {
     position: absolute;
     top: -5%;
-    left: 0;
     background-image: url(/images/Home/background1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     opacity: 0.6;
     height: 115%;
-    /* 100% height to cover the entire div */
     width: 100%;
     z-index: 1;
 }
@@ -44,7 +41,6 @@
     width: 300px;
     justify-content: center;
     font-size: 24px;
-    align-self: "center";
     font-family: Libre Baskerville;
     background-color: #045570;
     border-radius: 15px;
@@ -89,7 +85,6 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     justify-content: center;
-    align-content: center;
     z-index: 2;
 }
 
@@ -101,7 +96,7 @@
 }
 
 .img_porque {
-    height: 350px;
+    width: 60%;
     border-radius: 15px;
 }
 
@@ -111,25 +106,20 @@
     align-content: center;
     z-index: 2;
     padding-right: 10%;
-    margin-top: -100px;
 }
 
 .grid_valores {
     display: flex;
-    grid-template: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-gap: 100px;
     margin-top: 30px;
 }
 
 .secao3 {
-    /* display: flex; */
     position: relative;
     overflow: hidden;
     height: 100vh;
-    /* Initial height */
-    text-align: center;
-    /* justify-content: center; */
-    /* align-content: center; */
+    /* text-align: center; */
 }
 
 .background_nossa_historia {
@@ -139,10 +129,8 @@
     background-blend-mode: lighten;
     background-repeat: no-repeat;
     background-size: cover;
-    /* opacity: 0.4; */
     background-position: center;
     height: 170%;
-    /* 100% height to cover the entire div */
     width: 100%;
     z-index: 1;
 }
@@ -152,94 +140,123 @@
     width: 60%;
     margin-top: 5%;
     margin-left: 8%;
-    opacity: 1;
 }
 
 .container_rect_sobre {
-    text-align: center;
     display: flex;
-    grid-template-columns: repeat(3, 1fr);
+    width: 100%;
+    height:80%;
     justify-content: center;
-    align-content: center;
+    align-items: flex-start;
     z-index: 2;
-    grid-gap: 100px;
-    margin-top: -10%;
+    gap: 5%;
 }
 
 .rectangle {
-    color: white;
     text-align: center;
-    justify-content: center;
-    align-content: center;
     z-index: 2;
+    border-radius: 15px;
+    width: 20%;
+    height: 75%;
+    background-color: white;
+    margin-top: 3%;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 2% 0;
+    z-index: 3;
+}
+
+.rectangle h1 {
+    font-family: Libre Baskerville;
+    text-align: center;
+    font-size: 22px;
+    font-weight: bold;
+    color: #045570;
+    z-index: 3;
+}
+
+.rectangle p1 {
+    font-family: Inter;
+    text-align: justify;
+    text-justify: auto;
+    font-size: 18px;
+    color: #045570;
+    margin-left: 8%;
+    margin-top: 5%;
+    margin-right: 8%;
+    z-index: 3;
 }
 
 .img-icon {
+    align-self: center;
     width: 25%;
-    margin-top: 12%;
+    margin-top: 6%;
 }
 
 .secao4 {
-    display: grid;
     position: relative;
     overflow: hidden;
     height: 110vh;
-    /* Initial height */
 }
 
 .Background_concierge {
     position: absolute;
-    top: 0;
-    left: 0;
     background-image: url(/images/Home/background3.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     opacity: 0.5;
     background-position: center;
     height: 100%;
-    /* 100% height to cover the entire div */
     width: 100%;
-    z-index: 0;
+    z-index:1;
+}
+
+.grid_concierge {
+    display:grid;
+    grid-template-columns:repeat(2,1fr);
+    height: 70%;
 }
 
 .texto_concierge {
     margin-top: 5%;
     margin-left: 8%;
-    width: 50%;
 }
 
 .titulo_concierge {
     margin-top: 4%;
     margin-left: 8%;
+    margin-right: 8%;
 }
 
 .topicos_concierge {
     margin-top: -3%;
     margin-left: 8%;
+    margin-right: 8%;
 }
 
 .container_img_concierge {
-    text-align: right;
-    justify-content: right;
-    align-content: right;
+    display: flex;
+    justify-content: center;
+    align-items: center ;
+    text-align: center;
     z-index: 3;
-    margin-top: -28%;
-    margin-right: 10%;
 }
 
 .img_concierge {
-    width: 25%;
+    width: 45%;
     border-radius: 40px;
     border: 5px solid #d4a23f90;
 }
 
 .container_frase_disney {
     display: flex;
-    width: 100%;
-    height: 110px;
-    justify-content: center;
-    background-color: #d4a23f90;
+    position: absolute;
     z-index: 3;
+    margin-top: 5%;
+    width: 100%;
+    height: 14%;
+    background-color: #d4a23f90;
 }
 
 .frase_disney {
@@ -247,19 +264,10 @@
     font-size: 24px;
     text-align: justify;
     font-weight: bold;
-    align-self: "center";
+    align-self: center;
     font-family: Libre Baskerville;
     color: #045570;
     z-index: 3;
-}
-
-.rectangle {
-    border-radius: 15px;
-    width: 300px;
-    height: 440px;
-    background-color: white;
-    border: 2px solid white;
-    margin-top: 200px;
 }
 
 .nossa_historia_background {
@@ -294,4 +302,78 @@
     color: #045570;
     z-index: 3;
     padding-bottom: 1%;
+}
+
+@media screen and (max-width: 920px){
+    .secao1 {
+        height: 100vh;
+    }
+    .Background_inicio {
+        height: 135%;
+        background-size:cover;
+        background-position: top;
+    }
+    .img_logo {
+        margin-top: 40%;
+        width:90%;
+        height:auto; 
+    }
+    
+    .Background_porque_trab {
+        height:100%;
+    }
+    .grid_porque_trab {
+        align-items:unset;
+        grid-template-columns:unset;
+        grid-template-rows: repeat(2, 1fr);
+    }
+    .container_img_porque {
+        display: flex;
+        align-items: center;
+    }
+    .container_texto_porque {
+        padding-left: 10%;
+    }
+
+    .container_rect_sobre {
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: repeat(3,1fr);
+        margin-top: 5%;
+        padding-left: 10%;
+    }
+    .rectangle {
+        padding: 0;
+        text-align: left;
+        overflow: hidden;
+        width: 90%;
+        flex-direction:row;
+    }
+    .img-icon {
+        align-self:flex-start;
+        height:90%;
+        width: auto;
+        margin-top:2%;
+        margin-left: 2%;
+    }
+    .grid_concierge {
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: repeat(2,1fr);
+    }
+    .texto_concierge {
+        margin-top: 5%; 
+        margin-left: 3%;
+        margin-right: 3%;
+    }
+    .container_frase_disney {
+        margin-top: 10%;
+    }
+}
+
+@media screen and (max-width: 560px) {
+
+}
+
+@media screen and (max-width: 320px) {
+
 }
