--- a/src/styles/components/carousel_imoveis.css
+++ b/src/styles/components/carousel_imoveis.css
@@ -1,19 +1,19 @@
 /* Aqui se refere a mudança de imóvel */
 
 .carousel_container {
-    height:400px;
-    width:100%;
+    height: 100%;
+    width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top:6%;
-    padding-bottom:4%;
+    /* justify-content: center;
+    align-items: center; */
+    padding-top: 0%;
+    padding-bottom: 0%;
 }
-  
+
 .carousel-container img {
     border-radius: 22px;
-    height:400px;
-    width:600px;
+    height: 400px;
+    width: 600px;
 }
 
 .imovel {
@@ -25,15 +25,15 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     margin-top: 50px;
-    height:450px;
-    padding-top:6%;
-    padding-bottom:4%;
+    height: 70%;
+    /* padding-top: 6%; */
+    padding-bottom: 4%;
 }
-  
+
 .grid_infos img {
     border-radius: 20px;
-    height:366px;
-    width:550px;
+    height: 366px;
+    width: 550px;
 }
 
 
@@ -43,8 +43,10 @@
     align-content: center;
 }
 
-  
-.botao_voltar_imovel, .botao_passar_imovel {
+
+.botao_voltar_imovel,
+.botao_passar_imovel {
+    align-self:last baseline;
     height: 60px;
     width: 60px;
     font-size: 15px;
@@ -52,17 +54,16 @@
     border: none;
     cursor: pointer;
     background-color: transparent;
-    margin-bottom: -670px;
 }
 
-.botao_voltar_imovel img{
+.botao_voltar_imovel img {
     transform: scaleX(-1);
     height: 80px;
     width: 80px;
     opacity: 0.6;
 }
 
-.botao_passar_imovel  img{
+.botao_passar_imovel img {
     height: 80px;
     width: 80px;
     opacity: 0.6;
@@ -75,7 +76,7 @@
 .botao_passar_imovel {
     justify-content: right;
 }
-  
+
 /* Apartir daqui se refere a mudança de imagem */
 
 .teste {
@@ -98,14 +99,14 @@
     background-color: transparent;
 }
 
-.botao_voltar_foto img{
+.botao_voltar_foto img {
     transform: scaleX(-1);
     height: 60px;
     width: 60px;
     opacity: 0.6;
 }
 
-.botao_passar_foto  img{
+.botao_passar_foto img {
     height: 60px;
     width: 60px;
     opacity: 0.6;
@@ -121,19 +122,19 @@
 
 /* Referente aos textos */
 
-.title h2{
+.title h2 {
     font-family: Libre Baskerville;
     text-align: left;
     font-size: 40px;
     margin-left: 0px;
     color: #045570;
     z-index: 3;
-    margin-top: 5%;
-    margin-bottom: -6%;
+    /* margin-top: 5%; */
+    /* margin-bottom: -6%; */
 }
 
 .descricao_imovel {
-    width:650px;
+    width: 650px;
     overflow-y: auto;
 }
 
@@ -175,3 +176,50 @@
     color: #045570;
     font-weight: initial;
 }
+
+@media screen and (max-width: 920px) {
+    .carousel_container {   
+        width: 90%;
+    }
+    .grid_infos {
+        display: grid;
+        grid-template-columns: none;
+        grid-template-rows: repeat(2, 1fr);
+        gap:5%
+    }
+    .fotos_imovel {
+        justify-content: center;
+    }
+    .botao_voltar_imovel {
+        margin-left: -1%;
+    }
+    /* Referente aos textos */
+
+    .title h2 {
+        text-align: center;
+        font-size: 30px;
+    }
+    .descricao_imovel {
+        height: 130%;
+    }
+
+    .descricao_imovel p {
+        font-size: 22px;
+    }
+
+    .descricao_imovel ul {
+        font-size: 20px;      
+    }
+
+    .descricao_imovel li {
+        margin-top: 10px;
+    }
+
+    .descricao_imovel p1 {
+        font-size: 14px;
+    }
+}
+
+@media screen and (max-width: 560px) {}
+
+@media screen and (max-width: 320px) {}
