--- a/src/styles/pages/index.css
+++ b/src/styles/pages/index.css
@@ -25,14 +25,15 @@
 }
 
 .img_logo {
-    height: 35%;
+    width: 90%;
+    /* height: 35%; */
     margin-top: 35%;
 }
 
 .container_botao_home {
     display: flex;
     justify-content: center;
-    margin-top: 100px;
+    margin-top: 5%;
     opacity: 0.8;
 }
 
@@ -111,7 +112,7 @@
 .grid_valores {
     display: flex;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 100px;
+    grid-gap: 15%;
     margin-top: 30px;
 }
 
@@ -145,9 +146,9 @@
 .container_rect_sobre {
     display: flex;
     width: 100%;
-    height:80%;
+    height:60%;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     z-index: 2;
     gap: 5%;
 }
@@ -162,7 +163,6 @@
     margin-top: 3%;
     display: flex;
     flex-direction: column;
-    gap: 15px;
     padding: 2% 0;
     z-index: 3;
 }
@@ -252,6 +252,7 @@
 .container_frase_disney {
     display: flex;
     position: absolute;
+    justify-items: center;
     z-index: 3;
     margin-top: 5%;
     width: 100%;
@@ -260,6 +261,7 @@
 }
 
 .frase_disney {
+    width: 100%;
     justify-content: center;
     font-size: 24px;
     text-align: justify;
@@ -271,7 +273,7 @@
 }
 
 .nossa_historia_background {
-    height: 400px;
+    height: 100vh;
     width: 100vw;
     display: flex;
     justify-content: center;
@@ -323,57 +325,113 @@
         height:100%;
     }
     .grid_porque_trab {
-        align-items:unset;
+        margin-top: 5%;
         grid-template-columns:unset;
         grid-template-rows: repeat(2, 1fr);
     }
     .container_img_porque {
-        display: flex;
+        margin-bottom: 5%;
         align-items: center;
+        order:2;
+    }
+    .img_porque {
+        width: 55%;
     }
     .container_texto_porque {
-        padding-left: 10%;
+        display: flex;
+        align-items: center;
+        padding-left: 15%;
     }
 
     .container_rect_sobre {
-        display: grid;
-        grid-template-columns: repeat(1,1fr);
-        grid-template-rows: repeat(3,1fr);
-        margin-top: 5%;
-        padding-left: 10%;
+        height: 80%;
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        align-items: center;
+        gap:5%;
+        margin-top: 0%;
+        /* padding-left: 10%; */
     }
     .rectangle {
-        padding: 0;
+        display: grid;
+        grid-template-columns: 20% 80%;
         text-align: left;
         overflow: hidden;
         width: 90%;
-        flex-direction:row;
+        height: 100%;
+        padding-left: 2%;
     }
     .img-icon {
-        align-self:flex-start;
-        height:90%;
-        width: auto;
-        margin-top:2%;
-        margin-left: 2%;
+        position: flex;
+        align-self:center;
+        justify-self: center;
+        width:90%;
+        height: auto;
+        margin-top:0%;
+        /* margin-left: 2%; */
+    }
+    .secao4 {
+        overflow: hidden;
+        height: 140vh;
     }
     .grid_concierge {
         grid-template-columns: repeat(1,1fr);
-        grid-template-rows: repeat(2,1fr);
+        grid-template-rows: 60% 40%;
+        gap:5%
     }
     .texto_concierge {
         margin-top: 5%; 
         margin-left: 3%;
         margin-right: 3%;
+        height: 1000px;
+    }
+    .img_concierge {
+        height: 100%;
+        width: auto;
     }
     .container_frase_disney {
-        margin-top: 10%;
-    }
+        margin-top: 15%;
+        font-size: 10px;
+    }   
 }
 
 @media screen and (max-width: 560px) {
-
+    .botao_home {
+        margin-top: 40%;
+    }
+    .container_img_porque {
+        display: flex;
+        align-items: center;
+        order:2;
+    }
+    .img_porque {
+        width: 80%;
+    }
+    .container_texto_porque {
+        padding-left: 10%;
+    }
+    .container_rect_sobre {
+        margin-top: 10%;
+        height: 80%;
+    }
+    .secao4 {
+        height: 120vh;
+    }
+    .grid_concierge {
+        height: 60%;
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: 50% 50%;
+        gap:5%
+    }
+    .img_concierge {
+        margin-top: 25%;
+        height: 70%;
+    }
 }
 
 @media screen and (max-width: 320px) {
-
+    .secao1 {
+        height:60vh
+    }
 }
