--- a/src/styles/components/carousel_depoimentos.css
+++ b/src/styles/components/carousel_depoimentos.css
@@ -71,4 +71,21 @@
     border-radius: 20px;
     z-index: 5;
   }
+
+@media screen and (max-width: 920px) {
+    .container_depoimentos {
+        grid-template-rows: repeat(4, 1fr);
+        grid-template-columns: none;
+    }
+    .botao_voltar_pagina, .botao_passar_pagina {
+        margin-top: 43%;
+    }
+}
   
+@media screen and (max-width: 560px) {
+    
+}
+
+@media screen and (max-width: 320px) {
+
+}
