--- a/src/styles/components/carousel_depoimentos.css
+++ b/src/styles/components/carousel_depoimentos.css
@@ -37,7 +37,7 @@
     margin-top: 5%;
     display: grid;
     gap: 5%;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 25%);
     grid-template-columns: repeat(2, 1fr);
 }
 
@@ -74,7 +74,7 @@
 
 @media screen and (max-width: 920px) {
     .container_depoimentos {
-        grid-template-rows: repeat(4, 1fr);
+        grid-template-rows: repeat(4, 18%);
         grid-template-columns: none;
     }
     .botao_voltar_pagina, .botao_passar_pagina {
@@ -83,7 +83,30 @@
 }
   
 @media screen and (max-width: 560px) {
-    
+    .container_depoimentos {
+        margin-left: 2%;
+        grid-template-rows: repeat(4, 20%);
+        grid-template-columns: none;
+    }
+    .botao_voltar_pagina, .botao_passar_pagina {
+        margin-top: 72%;
+    }
+    .retangulo_depoimento {
+        width: 100%;
+        overflow-y: auto;
+        padding: 2%;
+        padding-left: 8%;
+        border-radius: 15px;
+    }
+    .retangulo_depoimento p1 {
+        font-size: 12px;
+        overflow-y: auto;
+        line-height: 0.1
+    }
+    .img_depoimento {
+        width: 30%;
+        height: auto;
+      }
 }
 
 @media screen and (max-width: 320px) {
