Responsividade do footer.

--- a/src/styles/pages/clientes.css
+++ b/src/styles/pages/clientes.css
@@ -28,7 +28,7 @@
 
 @media screen and (max-width: 920px) {
     .clientes {
-        height: 110vh;
+        height: 1298px;
     }
     .background_clientes {
         height: 100%;
