--- a/src/styles/components/texto.css
+++ b/src/styles/components/texto.css
@@ -166,12 +166,26 @@
     z-index: 3;
 }
 @media screen and (max-width: 920px) {
+    .Texto p {
+        font-size: 16px;
+    }
     .Texto p1 {
+        margin-top: 0%;
+        font-size: 16px;
+    }
+    .Texto p3 {
+        font-size: 16px;
+    }
+    .Texto p4 {
         font-size: 16px;
     }
 
+    .Texto h2 {
+        font-size: 30px;
+    }
+    
     .Texto h3 {
-        font-size:10px;
+        font-size:20px;
         margin-left: 10%;
         margin-right: 10%;
     }
