Alterei a foto do home e a fonte do site todo.

--- a/src/styles/components/carousel_depoimentos.css
+++ b/src/styles/components/carousel_depoimentos.css
@@ -60,7 +60,7 @@
 
 
 .retangulo_depoimento p1 {
-    font-family: Inter;
+    font-family: Lato;
     text-align: justify;
     font-size: 18px;
     color: #045570;
