--- a/src/styles/pages/clientes.css
+++ b/src/styles/pages/clientes.css
@@ -19,7 +19,8 @@
 
 .titulo_clientes {
     margin-top: 10%;
-    margin-left: 10%
+    margin-left: 10%;
+    width: 40%;
 }
 
 .titulo_depoimentos {
