--- a/src/styles/components/texto.css
+++ b/src/styles/components/texto.css
@@ -1,7 +1,7 @@
 .Texto {
     color: #045570;
     display: flex;
-    font-family: Libre Baskerville;
+    font-family: Lato;
     flex-direction: column;
     gap: 15px;
     padding: 2% 0;
@@ -9,19 +9,21 @@
 }
 
 .Texto>h1 {
-    font-family: Libre Baskerville;
+    font-family: Lato;
     text-align: center;
     font-size: 22px;
-    font-weight: bold;
     color: #045570;
     z-index: 3;
+    font-weight: 300;
+    font-style: normal;
 }
 
 .Texto>h3 {
-    font-family: Libre Baskerville;
+    font-family: Lato;
     text-align: center;
     font-size: 22px;
-    font-weight: bold;
+    font-weight: 500;
+    font-style: normal;
     margin-left: 15%;
     margin-right: 15%;
     color: #045570;
@@ -29,47 +31,52 @@
 }
 
 .Texto>h2 {
-    font-family: Libre Baskerville;
+    font-family: Lato;
     text-align: left;
     font-size: 40px;
-    font-weight: bold;
     color: #045570;
     z-index: 3;
+    font-weight: 300;
+    font-style: normal;
 }
 
 .Texto>h2_t {
     margin-top: -10px;
     padding-left: 70px;
-    font-family: Libre Baskerville;
+    font-family: Lato;
     text-align: left;
     font-size: 40px;
-    font-weight: bold;
+    font-weight: 300;
+    font-style: normal;
     color: #045570;
     z-index: 3;
 }
 
 .Texto>h4 {
-    font-family: Libre Baskerville;
+    font-family: Lato;
     text-align: left;
     font-size: 24px;
-    font-weight: bold;
+    font-weight: 300;
+    font-style: normal;
     color: #045570;
     z-index: 3;
     white-space: nowrap;
 }
 
 .Texto p {
-    font-family: Inter;
+    font-family: Lato;
     text-align: left;
     text-justify: auto;
     font-size: 22px;
     color: #045570;
     z-index: 3;
     padding-bottom: 1%;
+    font-weight: 500;
+    font-style: normal;
 }
 
 .Texto p1 {
-    font-family: Inter;
+    font-family: Lato;
     text-align: justify;
     text-justify: auto;
     font-size: 18px;
@@ -78,10 +85,12 @@
     margin-top: 5%;
     margin-right: 8%;
     z-index: 3;
+    font-weight: 500;
+    font-style: normal;
 }
 
 .Texto p2 {
-    font-family: Inter;
+    font-family: Lato;
     text-align: left;
     font-size: 16px;
     color: #045570;
@@ -90,27 +99,33 @@
     margin-right: 8%;
     z-index: 3;
     /* font-weight: bold; */
+    font-weight: 500;
+    font-style: normal;
 }
 
 .Texto p3 {
-    font-family: Inter;
+    font-family: Lato;
     text-align: justify;
     font-size: 22px;
     color: #045570;
     z-index: 3;
     margin-top: 5%;
     /* font-weight: bold; */
+    font-weight: 500;
+    font-style: normal;
 }
 
 
 .Texto p4 {
-    font-family: Inter;
+    font-family: LAto;
     text-align: left;
     text-justify: auto;
     font-size: 22px;
     color: #045570;
     z-index: 3;
     padding-bottom: 1%;
+    font-weight: 500;
+    font-style: normal;
 }
 
 
@@ -124,7 +139,7 @@
 
 
 .Texto ul {
-    font-family: Inter;
+    font-family: Lato;
     text-align: left;
     font-size: 22px;
     color: #045570;
@@ -133,10 +148,12 @@
     padding-bottom: 1%;
     z-index: 3;
     line-height: 1.5;
+    font-weight: 500;
+    font-style: normal;
 }
 
 .Texto li {
-    font-family: Inter;
+    font-family: Lato;
     text-align: left;
     font-size: 22px;
     color: #045570;
@@ -145,25 +162,31 @@
     padding-bottom: 1%;
     z-index: 3;
     line-height: 1.3;
+    font-weight: 500;
+    font-style: normal;
 }
 
 .Texto hr{
-    font-family: Libre Baskerville;
+    font-family: Lato;
     text-justify: left;
     width: 60px;
     margin-left: 180px;
     background-color: #045570;
     border: 3px solid #045570;
     z-index: 3;
+    font-weight: 500;
+    font-style: normal;
 }
 
 .Texto hr2{
-    font-family: Libre Baskerville;
+    font-family: Lato;
     text-justify: left;
     width: 60px;
     background-color: #045570;
     border: 3px solid #045570;
     z-index: 3;
+    font-weight: 500;
+    font-style: normal;
 }
 @media screen and (max-width: 920px) {
     .Texto p {
