--- a/src/styles/pages/imoveis.css
+++ b/src/styles/pages/imoveis.css
@@ -34,7 +34,7 @@
 }
 
 .carousel_background h2 {
-    font-family: Libre Baskerville;
+    font-family: Lato;
     text-align: left;
     margin-left: 100px;
     font-size: 40px;
@@ -58,7 +58,9 @@
     justify-content: center;
     font-size: 24px;
     align-self: "center";
-    font-family: Libre Baskerville;
+    font-family: Lato;
+    font-weight: 500;
+    font-style: normal;
     background-color: #045570;
     border-radius: 15px;
     color: #E1DFDB;
