--- a/src/styles/pages/sobre_nos.css
+++ b/src/styles/pages/sobre_nos.css
@@ -25,7 +25,7 @@
     text-align: center;
     align-content: center;
     width: 50%;
-    margin-top: 10%;
+    margin-top: 8%;
     margin-left: 25%;
     margin-right: 25%;
     color: #045570;
@@ -38,16 +38,16 @@
 }
 
 .texto_quem_somos h2 {
-    font-family: Libre Baskerville;
+    font-family: LAto;
     text-align: center;
     font-size: 40px;
-    font-weight: bold;
+    font-weight: 300;
     color: #045570;
     z-index: 3;
 }
 
 .texto_quem_somos p4 {
-    font-family: Inter;
+    font-family: Lato;
     text-align: center;
     font-size: 22px;
     color: #045570;
@@ -72,7 +72,7 @@
     background-image: url("/images/sobre_nos/background-sobre-nos.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    opacity: 0.6;
+    opacity: 0.5;
     background-position: bottom right;
     height: 100%;
     width: 100%;
@@ -102,7 +102,7 @@
 
 .rectangle_sobre_nos p {
     text-indent: 30px;
-    font-family: Inter;
+    font-family: Lato;
     text-align: justify;
     text-justify: auto;
     font-size: 16px;
@@ -112,10 +112,10 @@
 }
 
 .rectangle_sobre_nos h1 {
-    font-family: Libre Baskerville;
+    font-family: Lato;
     text-align: center;
     font-size: 22px;
-    font-weight: bold;
+    font-weight: 300;
     color: #045570;
     z-index: 3;
 }
