--- a/src/styles/pages/clientes.css
+++ b/src/styles/pages/clientes.css
@@ -1,7 +1,7 @@
 .clientes {
     position: relative;
     overflow: hidden;
-    height: 140vh; /* Altura inicial */
+    height: 910px; /* Altura inicial */
     align-content: center;
 }
 
@@ -15,10 +15,12 @@
     height: 100%; /* Altura de 100% para cobrir todo o div */
     width: 100%;
     z-index: 0;
+    top:0;
 }
 
 .titulo_clientes {
-    margin-top: 10%;
+    top: 0;
+    margin-top: 150px;
     margin-left: 10%;
     width: 40%;
 }
