--- a/src/styles/components/carousel_depoimentos.css
+++ b/src/styles/components/carousel_depoimentos.css
@@ -88,12 +88,21 @@
         grid-template-rows: repeat(4, 20%);
         grid-template-columns: none;
     }
+    .depoimento {
+        justify-content: space-evenly;
+        flex-direction: column;
+    }
+    .retangulo_depoimento {
+        position: relative;
+        left: 0;
+    }
     .botao_voltar_pagina, .botao_passar_pagina {
         margin-top: 72%;
     }
     .retangulo_depoimento {
         width: 100%;
-        overflow-y: auto;
+        height: auto;
+        /* overflow-y: auto; */
         padding: 2%;
         padding-left: 8%;
         border-radius: 15px;
@@ -104,9 +113,10 @@
         line-height: 0.1
     }
     .img_depoimento {
+        margin-left:35%;
         width: 30%;
         height: auto;
-      }
+    }
 }
 
 @media screen and (max-width: 320px) {
