--- a/src/styles/components/footer.css
+++ b/src/styles/components/footer.css
@@ -15,7 +15,7 @@ footer {
 }
 
 .logo_footer {
-    height:25%
+    height:125px
 }
 
 .footer_direita {
@@ -63,18 +63,19 @@ footer {
     footer {
         display: grid;
         overflow:hidden;
-        height: 460px;
+        height: 360px;
         grid-template-columns: none;
         grid-template-rows: repeat(2, 1fr);
     }
     .footer_esquerda {
         margin-left: 3%;
         flex-direction: row;
+        justify-content: center ;
         height: 100px;
     }
     .logo_footer {
-        width:50%;
-        height:100%
+        height:90px;
+        width:auto
     }
     .footer_direita {
         flex-direction: column;
